2009-11-25  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.7cvs

2009-11-24  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.6

2009-10-29  William Cohen  <wcohen@redhat.com>

	* daemon/opd_perfmon.c: Fix start-daemon problem on ia64

2009-10-29  Maynard Johnson  <maynardj@us.ibm.com>

	* events/ppc64/power7/events:
	* events/ppc64/power7/event_mappings: Updates to POWER7 events and
	  groups

2009-10-28  Maynard Johnson  <maynardj@us.ibm.com>

	* doc/opreport.xsd: Fix up schema and bump version to match 2009-06-18 fix;
	  other schema fixups for correctness and to facilitate XML document-to-schema
	  validation works
	* libpp/xml_utils.cpp: bump schema version
	* libpp/format_output.cpp:
	* libpp/format_output.h: Fix regression in XML callgraph output
	  caused by 2009-06-18 fix

2009-10-26  Robert Richter <robert.richter@amd.com>

	* doc/oprofile.1.in: fix user-space daemon logfile in man page

2009-10-26  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/bfd_support.cpp:
	* libutil++/bfd_support.h: Fix regression in handling separate
	  debuginfo files 

2009-10-23  Robert Richter  <robert.richter@amd.com>

	* autogen.sh: create copies with libtoolize instead of symlinks

2009-10-23  Suravee Suthikulpanit  <suravee.suthikulpanit@amd.com>

	* events/x86-64/family10/events:
	* events/x86-64/family10/unit_masks: Update events and unitmasks
	  from publication 31116 revision 3.34 and fixes

2009-10-23  Maynard Johnson  <maynardj@us.ibm.com>

	* README_PACKAGERS: Add mention of new opjitconv binary

2009-10-14  Maynard Johnson  <maynardj@us.ibm.com>

	* agents/jvmpi/jvmpi_oprofile.cpp: Add extra #includes since new
	  libstdc++ header files do not include standard C header files

2009-10-13  Maynard Johnson  <maynardj@us.ibm.com>

	* utils/opcontrol: Remove incorrect redundant invocation of
	  get_image_range

2009-10-09  Robert Richter <robert.richter@amd.com>
